--- a/sass/user-list.scss
+++ b/sass/user-list.scss
@@ -55,7 +55,7 @@
   display: block;
   width: 18px;
   height: 18px;
-  fill: #231F20;
+  fill: #231f20;
   fill-opacity: 0.2;
 }
 
@@ -66,7 +66,7 @@
   display: block;
   width: 21px;
   height: 19px;
-  fill: #231F20;
+  fill: #231f20;
   fill-opacity: 0.2;
 }
 
