--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -31,6 +31,7 @@
   .page-main__wrapper {
     padding-top: 95px;
     padding-bottom: 91px;
+    border-top: 1px solid #dfdfdf;
 
     &::after {
       content: "";
