--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,33 +1,33 @@
 @import "normalize";
 @import "fonts";
-@import "_variables";
-@import "_mixins";
+@import "variables";
+@import "mixins";
 @import "global";
-@import "btn";
-@import "page-header";
-@import "main-nav";
-@import "user-list";
-@import "page-main";
-@import "promo";
-@import "product-week";
-@import "product";
-@import "advantages";
-@import "reviews";
-@import "slider";
-@import "contacts";
-@import "map";
-@import "catalog";
-@import "product-card";
-@import "production";
-@import "video";
-@import "form";
-@import "field-radio";
-@import "field-checkbox";
-@import "field-username";
-@import "field-phone";
-@import "field-mail";
-@import "field-message";
-@import "page-footer";
-@import "social";
-@import "add-to-cart";
-@import "overlay";
+@import "blocks/btn";
+@import "blocks/page-header";
+@import "blocks/main-nav";
+@import "blocks/user-list";
+@import "blocks/page-main";
+@import "blocks/promo";
+@import "blocks/product-week";
+@import "blocks/product";
+@import "blocks/advantages";
+@import "blocks/reviews";
+@import "blocks/slider";
+@import "blocks/contacts";
+@import "blocks/map";
+@import "blocks/catalog";
+@import "blocks/product-card";
+@import "blocks/production";
+@import "blocks/video";
+@import "blocks/form";
+@import "blocks/field-radio";
+@import "blocks/field-checkbox";
+@import "blocks/field-username";
+@import "blocks/field-phone";
+@import "blocks/field-mail";
+@import "blocks/field-message";
+@import "blocks/page-footer";
+@import "blocks/social";
+@import "blocks/add-to-cart";
+@import "blocks/overlay";
